--- a/gb/25/2/28/n14447919.md
+++ b/gb/25/2/28/n14447919.md
@@ -2,9 +2,7 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>江苏一批发市场租金暴涨 商户罢市抵制</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2025/03/id14447920-GettyImages-667429568-600x400.jpg" />///image2=```diff
-- 江苏南通市崇川区沪蔬通农产品批发市场62家商户罢市，抗议市场暴涨租金。图为2017年江苏省一个市场资料照。(STR/AFP via Getty Images)
-```
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2025/03/id14447920-GettyImages-667429568-600x400.jpg" />
 <h6>江苏南通市崇川区沪蔬通农产品批发市场62家商户罢市，抗议市场暴涨租金。图为2017年江苏省一个市场资料照。(STR/AFP via Getty Images)</h6>
 <hr>
 	<p>【大纪元2025年03月01日讯】（大纪元专题部记者宁芯采访报导）2月25日、26日，江苏南通市崇川区沪蔬通农产品批发市场猪肉销售区域的62家商户罢市，抗议市场涨租金，让生意难做的商户雪上加霜。</p>
@@ -14,7 +12,7 @@
 <p>“6万8000元作为底价，然后竞标封顶三倍。现在一个摊位已经炒到25万元，有个摊位底价9万8000元，最高价格能达到29万元。我们不得不跟他搞（罢市），因为现在大环境不好，大家都没有钱，我们也是一样，没有生意赚不到钱。”赵梅说。</p>
 <p>目前商户的罢市仍然在持续，市场方面未给出任何说法，赵梅表示，他们猪肉区是第一批罢市的，无论如何要坚持到底，为了生存。</p>
 <p>大纪元记者致电沪蔬通市场，电话无人接听。</p>
-<p><a title="2月25至26日，江苏南通沪蔬通农产品批发市场的商户连续两天罢市，抗议市场老板在大环境非常差的情况下，将租金暴涨五倍。据商户透露，摊位费由已经由原先的4万8千元，涨到了现在的25万元。目前商户的罢市行动还在持续。" loading="lazy" data2-src=""></a><a href="https://d37g5boc7rm625.cloudfront.net/B6uUE4Tyn"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1hf30uagumu6vYXhAciv9is051191c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p><a title="2月25至26日，江苏南通沪蔬通农产品批发市场的商户连续两天罢市，抗议市场老板在大环境非常差的情况下，将租金暴涨五倍。据商户透露，摊位费由已经由原先的4万8千元，涨到了现在的25万元。目前商户的罢市行动还在持续。" loading="lazy" data2-src=""></a><a href="https://d2nbk5p6zab41i.cloudfront.net/O2hUE4Tys"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1hf30uagumu6vYXhAciv9is051191c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <h2>大陆百姓眼中的百业萧条</h2>
 <p>中国新年已过，应该是所有人奔赴新的一年开始，但是今年开年在社交媒体里充斥的是倒闭、失业、返乡的景象。</p>
 <p>在抖音平台随处可见博主拍摄的商场空空荡荡、街道两边的店铺出租、出兑、关门的景象，从曾经的繁华到现在的冷清，服装市场更是见不到顾客，很难开张，而找工作的人的数量总是远远多于招工的人数。</p>
@@ -38,12 +36,12 @@
 <p>“山东金宝”说：“北京的底商到处是倒闭招租的店铺，现在做什么都不容易，各行各业惨淡，轻易不要做老板。”</p>
 <p>责任编辑：连书华#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/15/n10219359.md#1" target="_blank">中共淫乱的前生今世（2）江氏“新时代”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/11/10/n3726603.md#1" target="_blank">【历史回顾】羊城晚报：老少皆炼法轮功</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/11/n10208093.md#1" target="_blank">古玉文：消灭私有制不是出路（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/28/n11352168.md#1" target="_blank">前大陆公安：中共镇压法轮功早有预谋</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
