--- a/gb/25/1/20/n14417789.md
+++ b/gb/25/1/20/n14417789.md
@@ -2,9 +2,7 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>江苏数千高中生抗议 迫使校方取消寒假补课</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2025/01/id14417792-GettyImages-1208549789-600x400.jpg" />///image2=```diff
-- 2025年1月18日江苏几所中学数千名学生发起抗议活动，成功取消了校方原定的寒假补课计划。图为2020年3月30日疫情期间，江苏省一所中学学生返回教室。(STR/AFP via Getty Images)
-```
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2025/01/id14417792-GettyImages-1208549789-600x400.jpg" />
 <h6>2025年1月18日江苏几所中学数千名学生发起抗议活动，成功取消了校方原定的寒假补课计划。图为2020年3月30日疫情期间，江苏省一所中学学生返回教室。(STR/AFP via Getty Images)</h6>
 <hr>
 	<p>【大纪元2025年01月20日讯】（大纪元专题部记者宁芯采访报导）1月18日，江苏泰州市兴化市楚水实验中学、兴化中学和兴化市第一中学的数千名学生发起抗议活动，成功迫使校方取消原定的寒假高额费用补课计划，被外界称为“一一八学生运动”与“反秃头集团压迫运动”。</p>
@@ -16,7 +14,7 @@
 <p>赵志诚说，学生发起抗议的另一个原因是高额的补课费，他们学校一天补课费用为200元，其它学校为一天100多元，“而且我们补了一天都没有讲新课”。</p>
 <p>他告诉记者，家长们也支持放假，实际上学生自己在校外补课一学期才2000元。学生们听说，此次补课费校方打算360万元归学校，78万元作为老师的补贴费用。</p>
 <p>不过校方仍然未按教育厅的2月12日开学的规定执行，赵志诚表示，他们学校让学生2月5日返校。如果学校继续让学生补课，他们也会继续抗议，“学生的假期不能被剥夺”。</p>
-<p><a title="1月18日，江苏泰州市兴化市楚水实验中学、兴化中学和兴化市第一中学数千名学生发起抗议活动，成功取消了校方原定的寒假高额补课计划，被外界称为“一一八学生运动”与“反秃头集团压迫运动”。 ｜#中国新闻 新唐人大纪元联合频道" loading="lazy" data2-src=""></a><a href="https://dycg1eql8aigr.cloudfront.net/C7t5ZNudr"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1hc2lakbn507EzZJGZ5PiWvJT1v81c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
+<p><a title="1月18日，江苏泰州市兴化市楚水实验中学、兴化中学和兴化市第一中学数千名学生发起抗议活动，成功取消了校方原定的寒假高额补课计划，被外界称为“一一八学生运动”与“反秃头集团压迫运动”。 ｜#中国新闻 新唐人大纪元联合频道" loading="lazy" data2-src=""></a><a href="https://d3vg08phoazui6.cloudfront.net/W7q5ZNudp"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1hc2lakbn507EzZJGZ5PiWvJT1v81c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
 <p>据记者了解，在江苏当地，补课非常盛行，初中与高中生每天从早六七点钟到晚上十点多都是在学校学习，高三的毕业生甚至学习将近11个小时，学习压力非常大。</p>
 <p>江苏泗洪中学一名高二的学生胡勇（化名）对记者表示，他们学校1月23日才放假，现在正在补课中，他们学校补课都向县教育局打了招呼，因此即使学生们抗议也是无用，至于补课费用多少，他们现在也不太清楚。</p>
 <p>他说：“你们不知道江苏学子的苦啊，我们不敢抗议，如果抗议，我们学校首先把带头的抓起来，至少是记过处分，停课一星期。理想很丰满，现实很骨感。”</p>
@@ -26,12 +24,12 @@
 <p>也有家长在网络上感叹说，“有那补课的钱，不如带孩子出去旅行，现在很多孩子只晓得做题，生活常识都没有。”“中式教育罢了，所谓的某方面天赋什么的都被学习磨没了。”</p>
 <p>责任编辑：连书华#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/23/n10420856.md#1" target="_blank">林辉：李大钊误导北大学生同时也在卖国</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/10/25/n2308544.md#1" target="_blank">中国人想问又不敢问的法轮功问题解答</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/14/n9958294.md#1" target="_blank">金剑：中央集权制绝对不是封建社会（之二）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/23/n11273948.md#1" target="_blank">青年大法弟子：我们为何会坚持修炼如初</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
